--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="./assets/main.js"></script>
 </head>
 
 <body>
@@ -43,14 +44,14 @@
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Description</p>
+              Full Stack Developer</p>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="https://ui-avatars.com/api/?background=0D8ABC&color=fff" alt="">
+        src="https://images.pexels.com/photos/7955076/pexels-photo-7955076.jpeg" alt="">
     </div>
   </div>
   <div class="bg-white">
