--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
                     <span class="sr-only">Title</span>
-                    <img class="h-8 w-auto sm:h-14" src="../img/cross.svg">
+                    <img class="h-8 w-auto sm:h-14" src="../img/cross.png">
                   </a>
                 </div>
               </div>
