--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
                     <span class="sr-only">Title</span>
-                    <img class="h-8 w-auto sm:h-14" src="https://lh3.googleusercontent.com/pw/AJFCJaXWIsStF2xikO2EC97OQyFNPrYAduo7SnDtlFtlMxhwcgMJmwotm_q6xqsEAwbMKDC2WRETQwZDyrxiKmpMS-rhwAXkO3bo_FrfJxoS7uy7k2xsV3BLOdjKlNogXQup30lCVUC_wLZvjdcu1jqjRigqAdPTNyAFejAGdTPMGjGHlvqMD5peiI4jLRN2_JJK6WtFCehDoOhiejQXZe7HZ3Yj1Wl15JnjWeVu_X93TAjuWut0BuE5vHozJZi_b_Ij8t81IJEIJ3nZ_nDUByylXLrWFS1Orrtz3f7qcj9BhiIzsX5zuBisF4QNI1F7qAFKTcBYM_GTPWHQhN8v7pGFaSI5wL9eD7BHarCjzyQbQIUlxcE5yPGg3U1h_Mf0hoHXtz4OqPos9gB5g0Oh9CM_1EGgF2J_TkPFzBTJzP_tms2Ul-CkyvhDRIjVnHMCqm7bYqL5E8ohpIWzMkijIWUtpRnn9qUMU2f34KbdW6p8DxicgnOmH-L6_IRg2p-K8iDwnTkdiaL8HSn44F7sroPk4yxs34TEvrGCCrxjHWGGLjC81FsngB5DuhqnxxglGEfto_Iea167P6HUo2uIZBIOTQ4DqkP3j_JUZZkfNnl-H-COXRE5GF7hJZVHeWYrWxAVhimK9IASeTPYCyPEdin4WMFlDTR2iiBm3zOsTGR2eI_ZcvyqpvocTkp8naVPe6dr_yjnoMR5RTFRaqmtFp6tKCTU1qbaV0XfeH6VDeuLouB2p37R1HdXOzB6H5W3-1d8-BXbDXnfQvUROPlK46SyY1pfLEmalxWMXXPGf2OtKYcrG5ndyK-GcT3HFkhTYIzT7RVy_ujY9tGySP-n_uqjd8_pyy1zoas7BvGNJ2PQ-gPRbha5POS9u7axim9cIMKwT_lbz8_dgBXHfW5BnH1MUCdZ2eAAzAdWVrhnINxn2IKO47nypHQoXehoqPE=w512-h512-s-no?authuser=0">
+                    <img class="h-8 w-auto sm:h-14" src="https://i.ibb.co/9H1BMyR/cross-1.png">
                   </a>
                 </div>
               </div>
